exports[`invalid(1): a { transition: display 200ms; transition-behavior: normal; } 1`] = `

  1 | a { transition: display 200ms; transition-behavior: normal; }

`;

exports[`invalid(1): a { transition: display 200ms; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition: display 200ms; transition-behavior: normal; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 200ms; transition-behavior: allow-discrete; }

`;

exports[`invalid(10): a { transition-property: display, opacity, position; transition-behavior: normal, allow-discrete; } 1`] = `

  1 | a { transition-property: display, opacity, position; transition-behavior: normal, allow-discrete; }

`;

exports[`invalid(10): a { transition-property: display, opacity, position; transition-behavior: normal, allow-discrete; } 2`] = `

Message:
> 1 | a { transition-property: display, opacity, position; transition-behavior: normal, allow-discrete; }
    |                          ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, opacity, position; transition-behavior: allow-discrete, allow-discrete; }

`;

exports[`invalid(10): a { transition-property: display, opacity, position; transition-behavior: normal, allow-discrete; } 3`] = `

Message:
> 1 | a { transition-property: display, opacity, position; transition-behavior: normal, allow-discrete; }
    |                                            ^^^^^^^^ Transitioning \`position\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, opacity, position; transition-behavior: allow-discrete, allow-discrete; }

`;

exports[`invalid(11): a { transition-property: opacity, --progress, display; transition-behavior: normal, allow-discrete; } 1`] = `

  1 | a { transition-property: opacity, --progress, display; transition-behavior: normal, allow-discrete; }

`;

exports[`invalid(11): a { transition-property: opacity, --progress, display; transition-behavior: normal, allow-discrete; } 2`] = `

Message:
> 1 | a { transition-property: opacity, --progress, display; transition-behavior: normal, allow-discrete; }
    |                                               ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: opacity, --progress, display; transition-behavior: allow-discrete, allow-discrete; }

`;

exports[`invalid(12): a { transition-property: display; transition-behavior: normal, allow-discrete; } 1`] = `

  1 | a { transition-property: display; transition-behavior: normal, allow-discrete; }

`;

exports[`invalid(12): a { transition-property: display; transition-behavior: normal, allow-discrete; } 2`] = `

Message:
> 1 | a { transition-property: display; transition-behavior: normal, allow-discrete; }
    |                          ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display; transition-behavior: allow-discrete, allow-discrete; }

`;

exports[`invalid(13): a { transition: all 1s allow-discrete, display 1s normal; } 1`] = `

  1 | a { transition: all 1s allow-discrete, display 1s normal; }

`;

exports[`invalid(13): a { transition: all 1s allow-discrete, display 1s normal; } 2`] = `

Message:
> 1 | a { transition: all 1s allow-discrete, display 1s normal; }
    |                                        ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: all 1s allow-discrete, display 1s allow-discrete; }

`;

exports[`invalid(14): a { transition: display 1s allow-discrete, display 1s normal; } 1`] = `

  1 | a { transition: display 1s allow-discrete, display 1s normal; }

`;

exports[`invalid(14): a { transition: display 1s allow-discrete, display 1s normal; } 2`] = `

Message:
> 1 | a { transition: display 1s allow-discrete, display 1s normal; }
    |                                            ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s allow-discrete, display 1s allow-discrete; }

`;

exports[`invalid(15): a { transition: overflow 1s allow-discrete, overflow-x 1s normal; } 1`] = `

  1 | a { transition: overflow 1s allow-discrete, overflow-x 1s normal; }

`;

exports[`invalid(15): a { transition: overflow 1s allow-discrete, overflow-x 1s normal; } 2`] = `

Message:
> 1 | a { transition: overflow 1s allow-discrete, overflow-x 1s normal; }
    |                                             ^^^^^^^^^^ Transitioning \`overflow-x\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: overflow 1s allow-discrete, overflow-x 1s allow-discrete; }

`;

exports[`invalid(16): a { transition: white-space 1s allow-discrete, white-space-collapse 1s normal; } 1`] = `

  1 | a { transition: white-space 1s allow-discrete, white-space-collapse 1s normal; }

`;

exports[`invalid(16): a { transition: white-space 1s allow-discrete, white-space-collapse 1s normal; } 2`] = `

Message:
> 1 | a { transition: white-space 1s allow-discrete, white-space-collapse 1s normal; }
    |                                                ^^^^^^^^^^^^^^^^^^^^ Transitioning \`white-space-collapse\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: white-space 1s allow-discrete, white-space-collapse 1s allow-discrete; }

`;

exports[`invalid(17): a { transition: white-space-collapse 1s normal, white-space 1s allow-discrete, display 1s normal; } 1`] = `

  1 | a { transition: white-space-collapse 1s normal, white-space 1s allow-discrete, display 1s normal; }

`;

exports[`invalid(17): a { transition: white-space-collapse 1s normal, white-space 1s allow-discrete, display 1s normal; } 2`] = `

Message:
> 1 | a { transition: white-space-collapse 1s normal, white-space 1s allow-discrete, display 1s normal; }
    |                                                                                ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: white-space-collapse 1s normal, white-space 1s allow-discrete, display 1s allow-discrete; }

`;

exports[`invalid(18): a { transition: display 1s !important; transition-behavior: allow-discrete; } 1`] = `

  1 | a { transition: display 1s !important; transition-behavior: allow-discrete; }

`;

exports[`invalid(18): a { transition: display 1s !important; transition-behavior: allow-discrete; } 2`] = `

Message:
> 1 | a { transition: display 1s !important; transition-behavior: allow-discrete; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete display 1s !important; transition-behavior: allow-discrete; }

`;

exports[`invalid(19): a { transition-behavior: normal !important; transition: display 1s allow-discrete; } 1`] = `

  1 | a { transition-behavior: normal !important; transition: display 1s allow-discrete; }

`;

exports[`invalid(19): a { transition-behavior: normal !important; transition: display 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition-behavior: normal !important; transition: display 1s allow-discrete; }
    |                                                         ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-behavior: allow-discrete !important; transition: display 1s allow-discrete; }

`;

exports[`invalid(2): a { transition: display 200ms; } 1`] = `

  1 | a { transition: display 200ms; }

`;

exports[`invalid(2): a { transition: display 200ms; } 2`] = `

Message:
> 1 | a { transition: display 200ms; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete display 200ms; }

`;

exports[`invalid(20): a { transition: display 1s !important; all: initial; } 1`] = `

  1 | a { transition: display 1s !important; all: initial; }

`;

exports[`invalid(20): a { transition: display 1s !important; all: initial; } 2`] = `

Message:
> 1 | a { transition: display 1s !important; all: initial; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete display 1s !important; all: initial; }

`;

exports[`invalid(21): a { transition: display 1s !\\69mportant; transition-behavior: allow-discrete; } 1`] = `

  1 | a { transition: display 1s !\\69mportant; transition-behavior: allow-discrete; }

`;

exports[`invalid(21): a { transition: display 1s !\\69mportant; transition-behavior: allow-discrete; } 2`] = `

Message:
> 1 | a { transition: display 1s !\\69mportant; transition-behavior: allow-discrete; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete display 1s !\\69mportant; transition-behavior: allow-discrete; }

`;

exports[`invalid(22): a { transition-property: display !important; transition-behavior: normal !important; all: var(--reset); } 1`] = `

  1 | a { transition-property: display !important; transition-behavior: normal !important; all: var(--reset); }

`;

exports[`invalid(22): a { transition-property: display !important; transition-behavior: normal !important; all: var(--reset); } 2`] = `

Message:
> 1 | a { transition-property: display !important; transition-behavior: normal !important; all: var(--reset); }
    |                          ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display !important; transition-behavior: allow-discrete !important; all: var(--reset); }

`;

exports[`invalid(23): a { transition: opacity 1s; transition-property: display !important; transition: transform 1s allow-discrete; transition-behavior: normal; } 1`] = `

  1 | a { transition: opacity 1s; transition-property: display !important; transition: transform 1s allow-discrete; transition-behavior: normal; }

`;

exports[`invalid(23): a { transition: opacity 1s; transition-property: display !important; transition: transform 1s allow-discrete; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition: opacity 1s; transition-property: display !important; transition: transform 1s allow-discrete; transition-behavior: normal; }
    |                                                  ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: opacity 1s; transition-property: display !important; transition: transform 1s allow-discrete; transition-behavior: allow-discrete; }

`;

exports[`invalid(24): a { all: initial; transition: display 1s; } 1`] = `

  1 | a { all: initial; transition: display 1s; }

`;

exports[`invalid(24): a { all: initial; transition: display 1s; } 2`] = `

Message:
> 1 | a { all: initial; transition: display 1s; }
    |                               ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { all: initial; transition: allow-discrete display 1s; }

`;

exports[`invalid(25): a { transition: display 1s !important; transition: var(--transition); } 1`] = `

  1 | a { transition: display 1s !important; transition: var(--transition); }

`;

exports[`invalid(25): a { transition: display 1s !important; transition: var(--transition); } 2`] = `

Message:
> 1 | a { transition: display 1s !important; transition: var(--transition); }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete display 1s !important; transition: var(--transition); }

`;

exports[`invalid(26): a { transition: var(--transition); transition: display 1s; } 1`] = `

  1 | a { transition: var(--transition); transition: display 1s; }

`;

exports[`invalid(26): a { transition: var(--transition); transition: display 1s; } 2`] = `

Message:
> 1 | a { transition: var(--transition); transition: display 1s; }
    |                                                ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: var(--transition); transition: allow-discrete display 1s; }

`;

exports[`invalid(27): a { transition: display 1s; transition-behavior: var(--behavior); transition-behavior: normal; } 1`] = `

  1 | a { transition: display 1s; transition-behavior: var(--behavior); transition-behavior: normal; }

`;

exports[`invalid(27): a { transition: display 1s; transition-behavior: var(--behavior); transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition: display 1s; transition-behavior: var(--behavior); transition-behavior: normal; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s; transition-behavior: var(--behavior); transition-behavior: allow-discrete; }

`;

exports[`invalid(28): a { transition: contain 1s; } 1`] = `

  1 | a { transition: contain 1s; }

`;

exports[`invalid(28): a { transition: contain 1s; } 2`] = `

Message:
> 1 | a { transition: contain 1s; }
    |                 ^^^^^^^ Property \`contain\` cannot be transitioned.

`;

exports[`invalid(29): a { transition: contain 1s allow-discrete; } 1`] = `

  1 | a { transition: contain 1s allow-discrete; }

`;

exports[`invalid(29): a { transition: contain 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition: contain 1s allow-discrete; }
    |                 ^^^^^^^ Property \`contain\` cannot be transitioned.

`;

exports[`invalid(3): a { transition: 200ms ease display; } 1`] = `

  1 | a { transition: 200ms ease display; }

`;

exports[`invalid(3): a { transition: 200ms ease display; } 2`] = `

Message:
> 1 | a { transition: 200ms ease display; }
    |                            ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete 200ms ease display; }

`;

exports[`invalid(30): a { transition-property: contain; } 1`] = `

  1 | a { transition-property: contain; }

`;

exports[`invalid(30): a { transition-property: contain; } 2`] = `

Message:
> 1 | a { transition-property: contain; }
    |                          ^^^^^^^ Property \`contain\` cannot be transitioned.

`;

exports[`invalid(31): a { transition: will-change 1s; } 1`] = `

  1 | a { transition: will-change 1s; }

`;

exports[`invalid(31): a { transition: will-change 1s; } 2`] = `

Message:
> 1 | a { transition: will-change 1s; }
    |                 ^^^^^^^^^^^ Property \`will-change\` cannot be transitioned.

`;

exports[`invalid(32): a { transition: will-change 1s allow-discrete; } 1`] = `

  1 | a { transition: will-change 1s allow-discrete; }

`;

exports[`invalid(32): a { transition: will-change 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition: will-change 1s allow-discrete; }
    |                 ^^^^^^^^^^^ Property \`will-change\` cannot be transitioned.

`;

exports[`invalid(33): a { transition-property: will-change; } 1`] = `

  1 | a { transition-property: will-change; }

`;

exports[`invalid(33): a { transition-property: will-change; } 2`] = `

Message:
> 1 | a { transition-property: will-change; }
    |                          ^^^^^^^^^^^ Property \`will-change\` cannot be transitioned.

`;

exports[`invalid(34): a { transition: transition-duration 1s; } 1`] = `

  1 | a { transition: transition-duration 1s; }

`;

exports[`invalid(34): a { transition: transition-duration 1s; } 2`] = `

Message:
> 1 | a { transition: transition-duration 1s; }
    |                 ^^^^^^^^^^^^^^^^^^^ Property \`transition-duration\` cannot be transitioned.

`;

exports[`invalid(35): a { transition: transition-duration 1s allow-discrete; } 1`] = `

  1 | a { transition: transition-duration 1s allow-discrete; }

`;

exports[`invalid(35): a { transition: transition-duration 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition: transition-duration 1s allow-discrete; }
    |                 ^^^^^^^^^^^^^^^^^^^ Property \`transition-duration\` cannot be transitioned.

`;

exports[`invalid(36): a { transition-property: transition-duration; } 1`] = `

  1 | a { transition-property: transition-duration; }

`;

exports[`invalid(36): a { transition-property: transition-duration; } 2`] = `

Message:
> 1 | a { transition-property: transition-duration; }
    |                          ^^^^^^^^^^^^^^^^^^^ Property \`transition-duration\` cannot be transitioned.

`;

exports[`invalid(37): a { transition: animation-name 1s; } 1`] = `

  1 | a { transition: animation-name 1s; }

`;

exports[`invalid(37): a { transition: animation-name 1s; } 2`] = `

Message:
> 1 | a { transition: animation-name 1s; }
    |                 ^^^^^^^^^^^^^^ Property \`animation-name\` cannot be transitioned.

`;

exports[`invalid(38): a { transition: animation-name 1s allow-discrete; } 1`] = `

  1 | a { transition: animation-name 1s allow-discrete; }

`;

exports[`invalid(38): a { transition: animation-name 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition: animation-name 1s allow-discrete; }
    |                 ^^^^^^^^^^^^^^ Property \`animation-name\` cannot be transitioned.

`;

exports[`invalid(39): a { transition-property: animation-name; } 1`] = `

  1 | a { transition-property: animation-name; }

`;

exports[`invalid(39): a { transition-property: animation-name; } 2`] = `

Message:
> 1 | a { transition-property: animation-name; }
    |                          ^^^^^^^^^^^^^^ Property \`animation-name\` cannot be transitioned.

`;

exports[`invalid(4): a { transition-property: display; transition-behavior: normal; } 1`] = `

  1 | a { transition-property: display; transition-behavior: normal; }

`;

exports[`invalid(4): a { transition-property: display; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition-property: display; transition-behavior: normal; }
    |                          ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display; transition-behavior: allow-discrete; }

`;

exports[`invalid(40): a { transition: scroll-behavior 1s; } 1`] = `

  1 | a { transition: scroll-behavior 1s; }

`;

exports[`invalid(40): a { transition: scroll-behavior 1s; } 2`] = `

Message:
> 1 | a { transition: scroll-behavior 1s; }
    |                 ^^^^^^^^^^^^^^^ Property \`scroll-behavior\` cannot be transitioned.

`;

exports[`invalid(41): a { transition: scroll-behavior 1s allow-discrete; } 1`] = `

  1 | a { transition: scroll-behavior 1s allow-discrete; }

`;

exports[`invalid(41): a { transition: scroll-behavior 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition: scroll-behavior 1s allow-discrete; }
    |                 ^^^^^^^^^^^^^^^ Property \`scroll-behavior\` cannot be transitioned.

`;

exports[`invalid(42): a { transition-property: scroll-behavior; } 1`] = `

  1 | a { transition-property: scroll-behavior; }

`;

exports[`invalid(42): a { transition-property: scroll-behavior; } 2`] = `

Message:
> 1 | a { transition-property: scroll-behavior; }
    |                          ^^^^^^^^^^^^^^^ Property \`scroll-behavior\` cannot be transitioned.

`;

exports[`invalid(43): a { transition: touch-action 1s; } 1`] = `

  1 | a { transition: touch-action 1s; }

`;

exports[`invalid(43): a { transition: touch-action 1s; } 2`] = `

Message:
> 1 | a { transition: touch-action 1s; }
    |                 ^^^^^^^^^^^^ Property \`touch-action\` cannot be transitioned.

`;

exports[`invalid(44): a { transition: touch-action 1s allow-discrete; } 1`] = `

  1 | a { transition: touch-action 1s allow-discrete; }

`;

exports[`invalid(44): a { transition: touch-action 1s allow-discrete; } 2`] = `

Message:
> 1 | a { transition: touch-action 1s allow-discrete; }
    |                 ^^^^^^^^^^^^ Property \`touch-action\` cannot be transitioned.

`;

exports[`invalid(45): a { transition-property: touch-action; } 1`] = `

  1 | a { transition-property: touch-action; }

`;

exports[`invalid(45): a { transition-property: touch-action; } 2`] = `

Message:
> 1 | a { transition-property: touch-action; }
    |                          ^^^^^^^^^^^^ Property \`touch-action\` cannot be transitioned.

`;

exports[`invalid(46): a { transition: position 1s; } 1`] = `

  1 | a { transition: position 1s; }

`;

exports[`invalid(46): a { transition: position 1s; } 2`] = `

Message:
> 1 | a { transition: position 1s; }
    |                 ^^^^^^^^ Transitioning \`position\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete position 1s; }

`;

exports[`invalid(47): a { transition: cursor 1s; } 1`] = `

  1 | a { transition: cursor 1s; }

`;

exports[`invalid(47): a { transition: cursor 1s; } 2`] = `

Message:
> 1 | a { transition: cursor 1s; }
    |                 ^^^^^^ Transitioning \`cursor\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete cursor 1s; }

`;

exports[`invalid(48): a { transition: pointer-events 1s; } 1`] = `

  1 | a { transition: pointer-events 1s; }

`;

exports[`invalid(48): a { transition: pointer-events 1s; } 2`] = `

Message:
> 1 | a { transition: pointer-events 1s; }
    |                 ^^^^^^^^^^^^^^ Transitioning \`pointer-events\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete pointer-events 1s; }

`;

exports[`invalid(49): a { transition: font-family 1s; } 1`] = `

  1 | a { transition: font-family 1s; }

`;

exports[`invalid(49): a { transition: font-family 1s; } 2`] = `

Message:
> 1 | a { transition: font-family 1s; }
    |                 ^^^^^^^^^^^ Transitioning \`font-family\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete font-family 1s; }

`;

exports[`invalid(5): a { transition-behavior: normal; transition-property: display; } 1`] = `

  1 | a { transition-behavior: normal; transition-property: display; }

`;

exports[`invalid(5): a { transition-behavior: normal; transition-property: display; } 2`] = `

Message:
> 1 | a { transition-behavior: normal; transition-property: display; }
    |                                                       ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-behavior: allow-discrete; transition-property: display; }

`;

exports[`invalid(50): a { transition: flex-direction 1s; } 1`] = `

  1 | a { transition: flex-direction 1s; }

`;

exports[`invalid(50): a { transition: flex-direction 1s; } 2`] = `

Message:
> 1 | a { transition: flex-direction 1s; }
    |                 ^^^^^^^^^^^^^^ Transitioning \`flex-direction\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete flex-direction 1s; }

`;

exports[`invalid(51): a { transition: overflow-x 1s; } 1`] = `

  1 | a { transition: overflow-x 1s; }

`;

exports[`invalid(51): a { transition: overflow-x 1s; } 2`] = `

Message:
> 1 | a { transition: overflow-x 1s; }
    |                 ^^^^^^^^^^ Transitioning \`overflow-x\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete overflow-x 1s; }

`;

exports[`invalid(52): a { TRANSITION: DISPLAY 200MS EASE NORMAL; } 1`] = `

  1 | a { TRANSITION: DISPLAY 200MS EASE NORMAL; }

`;

exports[`invalid(52): a { TRANSITION: DISPLAY 200MS EASE NORMAL; } 2`] = `

Message:
> 1 | a { TRANSITION: DISPLAY 200MS EASE NORMAL; }
    |                 ^^^^^^^ Transitioning \`DISPLAY\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { TRANSITION: DISPLAY 200MS EASE allow-discrete; }

`;

exports[`invalid(53): a { tr\\61 nsition: d\\69 splay 200m\\73  \\65 ase n\\6f rmal; } 1`] = `

  1 | a { tr\\61 nsition: d\\69 splay 200m\\73  \\65 ase n\\6f rmal; }

`;

exports[`invalid(53): a { tr\\61 nsition: d\\69 splay 200m\\73  \\65 ase n\\6f rmal; } 2`] = `

Message:
> 1 | a { tr\\61 nsition: d\\69 splay 200m\\73  \\65 ase n\\6f rmal; }
    |                    ^^^^^^^^^^ Transitioning \`d\\69 splay\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { tr\\61 nsition: d\\69 splay 200m\\73  \\65 ase allow-discrete; }

`;

exports[`invalid(54): a { transition\\2d property: d\\69 splay; transition-behavior: n\\6f rmal; } 1`] = `

  1 | a { transition\\2d property: d\\69 splay; transition-behavior: n\\6f rmal; }

`;

exports[`invalid(54): a { transition\\2d property: d\\69 splay; transition-behavior: n\\6f rmal; } 2`] = `

Message:
> 1 | a { transition\\2d property: d\\69 splay; transition-behavior: n\\6f rmal; }
    |                             ^^^^^^^^^^ Transitioning \`d\\69 splay\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition\\2d property: d\\69 splay; transition-behavior: allow-discrete; }

`;

exports[`invalid(55): a { transition: /* before */ display /* target */ 1s /* end */ !important; } 1`] = `

  1 | a { transition: /* before */ display /* target */ 1s /* end */ !important; }

`;

exports[`invalid(55): a { transition: /* before */ display /* target */ 1s /* end */ !important; } 2`] = `

Message:
> 1 | a { transition: /* before */ display /* target */ 1s /* end */ !important; }
    |                              ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: /* before */ allow-discrete display /* target */ 1s /* end */ !important; }

`;

exports[`invalid(56): a {\r\n  transition-property: display;\r\n  transition-behavior: /* before */ normal /* after */;\r\n} 1`] = `

  1 | a {
  2 |   transition-property: display;
  3 |   transition-behavior: /* before */ normal /* after */;
  4 | }

`;

exports[`invalid(56): a {\r\n  transition-property: display;\r\n  transition-behavior: /* before */ normal /* after */;\r\n} 2`] = `

Message:
  1 | a {
> 2 |   transition-property: display;
    |                        ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.
  3 |   transition-behavior: /* before */ normal /* after */;
  4 | }

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a {
  2 |   transition-property: display;
  3 |   transition-behavior: /* before */ allow-discrete /* after */;
  4 | }

`;

exports[`invalid(57): a { transition: display 0s 1s; } 1`] = `

  1 | a { transition: display 0s 1s; }

`;

exports[`invalid(57): a { transition: display 0s 1s; } 2`] = `

Message:
> 1 | a { transition: display 0s 1s; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete display 0s 1s; }

`;

exports[`invalid(58): a { & b { transition: display 1s; } } 1`] = `

  1 | a { & b { transition: display 1s; } }

`;

exports[`invalid(58): a { & b { transition: display 1s; } } 2`] = `

Message:
> 1 | a { & b { transition: display 1s; } }
    |                       ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { & b { transition: allow-discrete display 1s; } }

`;

exports[`invalid(59): @media (width > 1px) { a { transition: display 1s; } } 1`] = `

  1 | @media (width > 1px) { a { transition: display 1s; } }

`;

exports[`invalid(59): @media (width > 1px) { a { transition: display 1s; } } 2`] = `

Message:
> 1 | @media (width > 1px) { a { transition: display 1s; } }
    |                                        ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | @media (width > 1px) { a { transition: allow-discrete display 1s; } }

`;

exports[`invalid(6): a { transition-behavior: allow-discrete; transition: display 1s; } 1`] = `

  1 | a { transition-behavior: allow-discrete; transition: display 1s; }

`;

exports[`invalid(6): a { transition-behavior: allow-discrete; transition: display 1s; } 2`] = `

Message:
> 1 | a { transition-behavior: allow-discrete; transition: display 1s; }
    |                                                      ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-behavior: allow-discrete; transition: allow-discrete display 1s; }

`;

exports[`invalid(60): @supports (display: grid) { a { transition: display 1s; } } 1`] = `

  1 | @supports (display: grid) { a { transition: display 1s; } }

`;

exports[`invalid(60): @supports (display: grid) { a { transition: display 1s; } } 2`] = `

Message:
> 1 | @supports (display: grid) { a { transition: display 1s; } }
    |                                             ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | @supports (display: grid) { a { transition: allow-discrete display 1s; } }

`;

exports[`invalid(61): @container (width > 1px) { a { transition: display 1s; } } 1`] = `

  1 | @container (width > 1px) { a { transition: display 1s; } }

`;

exports[`invalid(61): @container (width > 1px) { a { transition: display 1s; } } 2`] = `

Message:
> 1 | @container (width > 1px) { a { transition: display 1s; } }
    |                                            ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | @container (width > 1px) { a { transition: allow-discrete display 1s; } }

`;

exports[`invalid(62): @layer components { a { transition: display 1s; } } 1`] = `

  1 | @layer components { a { transition: display 1s; } }

`;

exports[`invalid(62): @layer components { a { transition: display 1s; } } 2`] = `

Message:
> 1 | @layer components { a { transition: display 1s; } }
    |                                     ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | @layer components { a { transition: allow-discrete display 1s; } }

`;

exports[`invalid(63): @scope (.card) { a { transition: display 1s; } } 1`] = `

  1 | @scope (.card) { a { transition: display 1s; } }

`;

exports[`invalid(63): @scope (.card) { a { transition: display 1s; } } 2`] = `

Message:
> 1 | @scope (.card) { a { transition: display 1s; } }
    |                                  ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | @scope (.card) { a { transition: allow-discrete display 1s; } }

`;

exports[`invalid(64): a { @media print { transition: display 1s; } } 1`] = `

  1 | a { @media print { transition: display 1s; } }

`;

exports[`invalid(64): a { @media print { transition: display 1s; } } 2`] = `

Message:
> 1 | a { @media print { transition: display 1s; } }
    |                                ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { @media print { transition: allow-discrete display 1s; } }

`;

exports[`invalid(65): a { @starting-style { transition: display 1s; } } 1`] = `

  1 | a { @starting-style { transition: display 1s; } }

`;

exports[`invalid(65): a { @starting-style { transition: display 1s; } } 2`] = `

Message:
> 1 | a { @starting-style { transition: display 1s; } }
    |                                   ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { @starting-style { transition: allow-discrete display 1s; } }

`;

exports[`invalid(66): a { transition: display 1s, display 2s; } 1`] = `

  1 | a { transition: display 1s, display 2s; }

`;

exports[`invalid(66): a { transition: display 1s, display 2s; } 2`] = `

Message:
> 1 | a { transition: display 1s, display 2s; }
    |                             ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s, allow-discrete display 2s; }

`;

exports[`invalid(67): a { transition-property: display, display; transition-behavior: normal; } 1`] = `

  1 | a { transition-property: display, display; transition-behavior: normal; }

`;

exports[`invalid(67): a { transition-property: display, display; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition-property: display, display; transition-behavior: normal; }
    |                                   ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, display; transition-behavior: allow-discrete; }

`;

exports[`invalid(68): a { transition-property: none; transition-property: display; transition-behavior: normal; } 1`] = `

  1 | a { transition-property: none; transition-property: display; transition-behavior: normal; }

`;

exports[`invalid(68): a { transition-property: none; transition-property: display; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition-property: none; transition-property: display; transition-behavior: normal; }
    |                                                     ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: none; transition-property: display; transition-behavior: allow-discrete; }

`;

exports[`invalid(69): a { transition: all 1s; transition-property: display; transition-behavior: normal; } 1`] = `

  1 | a { transition: all 1s; transition-property: display; transition-behavior: normal; }

`;

exports[`invalid(69): a { transition: all 1s; transition-property: display; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition: all 1s; transition-property: display; transition-behavior: normal; }
    |                                              ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: all 1s; transition-property: display; transition-behavior: allow-discrete; }

`;

exports[`invalid(7): a { transition: display 1s allow-discrete; transition-behavior: normal; } 1`] = `

  1 | a { transition: display 1s allow-discrete; transition-behavior: normal; }

`;

exports[`invalid(7): a { transition: display 1s allow-discrete; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition: display 1s allow-discrete; transition-behavior: normal; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s allow-discrete; transition-behavior: allow-discrete; }

`;

exports[`invalid(70): a { transition-property: display, will-change; transition-behavior: normal, normal; } 1`] = `

  1 | a { transition-property: display, will-change; transition-behavior: normal, normal; }

`;

exports[`invalid(70): a { transition-property: display, will-change; transition-behavior: normal, normal; } 2`] = `

Message:
> 1 | a { transition-property: display, will-change; transition-behavior: normal, normal; }
    |                          ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, will-change; transition-behavior: allow-discrete, normal; }

`;

exports[`invalid(70): a { transition-property: display, will-change; transition-behavior: normal, normal; } 3`] = `

Message:
> 1 | a { transition-property: display, will-change; transition-behavior: normal, normal; }
    |                                   ^^^^^^^^^^^ Property \`will-change\` cannot be transitioned.

`;

exports[`invalid(71): a { transition: display 1s normal, content-visibility 1s normal; } 1`] = `

  1 | a { transition: display 1s normal, content-visibility 1s normal; }

`;

exports[`invalid(71): a { transition: display 1s normal, content-visibility 1s normal; } 2`] = `

Message:
> 1 | a { transition: display 1s normal, content-visibility 1s normal; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s allow-discrete, content-visibility 1s normal; }

`;

exports[`invalid(71): a { transition: display 1s normal, content-visibility 1s normal; } 3`] = `

Message:
> 1 | a { transition: display 1s normal, content-visibility 1s normal; }
    |                                    ^^^^^^^^^^^^^^^^^^ Transitioning \`content-visibility\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s normal, content-visibility 1s allow-discrete; }

`;

exports[`invalid(72): a { transition: display 1s normal, opacity 2s allow-discrete, content-visibility 1s; } 1`] = `

  1 | a { transition: display 1s normal, opacity 2s allow-discrete, content-visibility 1s; }

`;

exports[`invalid(72): a { transition: display 1s normal, opacity 2s allow-discrete, content-visibility 1s; } 2`] = `

Message:
> 1 | a { transition: display 1s normal, opacity 2s allow-discrete, content-visibility 1s; }
    |                 ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s allow-discrete, opacity 2s allow-discrete, content-visibility 1s; }

`;

exports[`invalid(72): a { transition: display 1s normal, opacity 2s allow-discrete, content-visibility 1s; } 3`] = `

Message:
> 1 | a { transition: display 1s normal, opacity 2s allow-discrete, content-visibility 1s; }
    |                                                               ^^^^^^^^^^^^^^^^^^ Transitioning \`content-visibility\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: display 1s normal, opacity 2s allow-discrete, allow-discrete content-visibility 1s; }

`;

exports[`invalid(73): a { transition-behavior: allow-discrete, normal; transition-property: display, position; } 1`] = `

  1 | a { transition-behavior: allow-discrete, normal; transition-property: display, position; }

`;

exports[`invalid(73): a { transition-behavior: allow-discrete, normal; transition-property: display, position; } 2`] = `

Message:
> 1 | a { transition-behavior: allow-discrete, normal; transition-property: display, position; }
    |                                                                                ^^^^^^^^ Transitioning \`position\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-behavior: allow-discrete, allow-discrete; transition-property: display, position; }

`;

exports[`invalid(8): a { transition: opacity 1s; transition-property: display; } 1`] = `

  1 | a { transition: opacity 1s; transition-property: display; }

`;

exports[`invalid(8): a { transition: opacity 1s; transition-property: display; } 2`] = `

Message:
> 1 | a { transition: opacity 1s; transition-property: display; }
    |                                                  ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition: allow-discrete opacity 1s; transition-property: display; }

`;

exports[`invalid(9): a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; } 1`] = `

  1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; }

`;

exports[`invalid(9): a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; } 2`] = `

Message:
> 1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; }
    |                          ^^^^^^^ Transitioning \`display\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: allow-discrete; }

`;

exports[`invalid(9): a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; } 3`] = `

Message:
> 1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; }
    |                                            ^^^^^^^^^^^^^^^^^^ Transitioning \`content-visibility\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: allow-discrete; }

`;

exports[`invalid(9): a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; } 4`] = `

Message:
> 1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: normal; }
    |                                                                ^^^^^^^ Transitioning \`overlay\` requires \`allow-discrete\` behavior.

Suggestion 1/1: Allow discrete transitions for all targets using this behavior entry.:
  1 | a { transition-property: display, opacity, content-visibility, overlay; transition-behavior: allow-discrete; }

`;
